# home-assistant-rouvy

./: .env.example  .gitignore  .markdownlint-cli2.yaml  CHANGELOG.md  PROJECT_STRUCTURE.md  README.md  hacs.json  main.py  mkdocs.yml  pyproject.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  integration-tests.yml  release.yml
custom_components/rouvy/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  data.py  entity.py  manifest.json  sensor.py  services.yaml  strings.json
custom_components/rouvy/api_client/: __init__.py  __main__.py  client.py  models.py  parser.py
custom_components/rouvy/translations/: en.json
docs/: TURBO_STREAM.md  getting-started.md  index.md
docs-src/: commands.yaml  schemas.yaml
docs-src/scripts/: generate_docs.py  validate_examples.py
docs/architecture/: project-structure.md  turbo-stream.md
docs/guides/: home-assistant-setup.md
docs/reference/commands/: activities.md  activity-stats.md  apps.md  career.md  challenges.md  events.md  friends.md  index.md  profile.md  raw.md  register-challenge.md  register-event.md  routes.md  set-ftp.md  set-height.md  set-max-hr.md  set-profile.md  set-timezone.md  set-units.md  set-weight.md  set-zones.md  set.md  unregister-event.md  zones.md
docs/reference/schemas/: index.md
docs/samples/: activities-pagination-data.txt  profile-overview-data.txt  sample_profile_overview_data.txt  sample_resources_activities-pagination_data.txt  sample_user-settings_connected-apps_data.txt  sample_user-settings_data.txt  sample_user-settings_zones_data.txt  user-settings-connected-apps-data.txt  user-settings-data.txt  user-settings-zones-data.txt
integrations/home-assistant/: README.md  pyproject.toml
integrations/home-assistant/appdaemon/: __init__.py  rouvy_app.py
openspec/changes/archive/2026-02-06-add-logging-framework/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-06-add-logging-framework/specs/logging-framework/: spec.md
openspec/changes/archive/2026-02-06-rouvy-api-client/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-06-rouvy-api-client/specs/rouvy-api-requests/: spec.md
openspec/changes/archive/2026-02-06-rouvy-api-client/specs/rouvy-auth-session/: spec.md
scripts/: debug_parser.py  demo_parser.py  test_endpoints.py
src/rouvy_api_client/: __init__.py  __main__.py  client.py  config.py  errors.py  models.py  parser.py
tests/: conftest.py  test_cli.py  test_client.py  test_client_extended.py  test_config.py  test_errors.py  test_ha_api.py  test_ha_integration.py  test_ha_sensor.py  test_models.py  test_models_direct.py  test_parser.py  windows_compat.py
tests/integration/: __init__.py  conftest.py  test_read_endpoints.py  test_write_endpoints.py
