[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rouvy-hass-integration"
version = "0.1.0"
description = "Home Assistant / AppDaemon integration for the Rouvy API Client"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Mike Hill" }]
dependencies = [
    "rouvy-api-client>=0.1.0",
    "appdaemon>=4.4.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "responses>=0.25.0"]

[tool.setuptools.packages.find]
include = ["appdaemon*"]
